--- a/visual.html
+++ b/visual.html
@@ -106,7 +106,7 @@
                     <div class="pic-item-3">  
                     <a href="#gallery-4" class="btn-gallery">
                         <div class="overlay"></div>
-                        <img src="img/edm/Edms-01.png" />
+                        <img src="img/edm/EDMs-01.png" />
                     </a>
                     </div>
                 </li>
@@ -114,7 +114,7 @@
                     <div class="pic-item-3">  
                     <a href="#gallery-5" class="btn-gallery">
                         <div class="overlay"></div>
-                        <img src="img/edm/Edms-03.png" />
+                        <img src="img/edm/EDMs-03.png" />
                         
                     </a>
                     </div>
@@ -123,7 +123,7 @@
                     <div class="pic-item-3">  
                     <a href="#gallery-6" class="btn-gallery">
                         <div class="overlay"></div>
-                        <img src="img/edm/Edms-02.png" />
+                        <img src="img/edm/EDMs-02.png" />
                     </a>
                     </div>
                 </li>
