--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
             <!--<h3>About Me</h3>
                 <p style="text-align: left;">After graduating from TamKang University, I started working in a software company as a visual and web designer for 4 years. In 2017, I joined Dear ABC, an English Learning app project, and is responsible for UI and GUI. In my free time, I love illustrates, you can see my illustrations in <a href="http://tifayin.tumblr.com/" target="_blank">Tumblr</a>.       
                 <a href="#" target="_blank" class="button">Resume.</a>
-                </p>  
-        </div>-->
+                </p>  -->
+        </div>
 
         <!----------------- Contact ----------------->
         <div class="contact">
