--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Tifa Yin">
     <meta name="description" content="UI Designer and illustrator.">
     <meta name="keywords" content="illustrator, illustration, UI Designer" />
-    <!--<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">-->
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     
     <link rel="shortcut icon" type="image/gif" href="img/favicon.ico">
 	<link rel="bookmark" type="image/gif" href="img/favicon.ico"/>
