--- a/illustration.html
+++ b/illustration.html
@@ -87,10 +87,24 @@
                         <div class="overlay"></div>
                         <img src="img/branding/iwanka.png" />
                     </a>
-                    <h3>iwanka</h3>
-                    <p></p>
                     </div>
-                </li>                
+                </li>   
+                <li>
+                    <div class="work-item col-3">  
+                    <a href="#gallery-4" class="btn-gallery">
+                        <div class="overlay"></div>
+                        <img src="img/branding/iwanka.png" />
+                    </a>
+                    </div>
+                </li> 
+                <li>
+                    <div class="work-item col-3">  
+                    <a href="#gallery-4" class="btn-gallery">
+                        <div class="overlay"></div>
+                        <img src="img/branding/iwanka.png" />
+                    </a>
+                    </div>
+                </li> 
                 </ul>
                 
                 <div id="gallery-1" class="hidden">
