--- a/branding.html
+++ b/branding.html
@@ -30,7 +30,7 @@
         <div class="nav-container">
             <ul class="logo">
                 <li><a href="index.html">
-                    <img src="img/title.png"></a>
+                    <img src="img/title.svg"></a>
                 </li>
             </ul>
             <ul class="menu">
