--- a/icare-app.html
+++ b/icare-app.html
@@ -44,7 +44,7 @@
         
         <!----------------- title ----------------->
         <div class="about-item"> 
-            <h1>DEAR ABC</h1>
+            <h1>iCare</h1>
             <h2>APP UI DESIGN</h2>
         </div>
         
