--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <div class="nav-container">
             <ul class="logo">
                 <li>
+                    
                     <a href="index.html">
-                        <img src="img/title.svg">
+                        <div><img src="img/title.svg" width="100px;"></div>
                     </a>
+                    
                 </li>
             </ul>
             <ul class="menu">
