--- a/icare-web.html
+++ b/icare-web.html
@@ -29,8 +29,10 @@
     <div class="nav">
         <div class="nav-container">
             <ul class="logo">
-                <li><a href="index.html">
-                    <img src="img/title.svg"></a>
+                <li>
+                    <a href="index.html">
+                        <div><img src="img/title.svg" width="100px;"></div>
+                    </a>
                 </li>
             </ul>
             <ul class="menu">
@@ -45,7 +47,7 @@
         <!----------------- title ----------------->
         <div class="about-item"> 
             <h1>iCare</h1>
-            <h2>APP UI DESIGN</h2>
+            <h2>WEB UI DESIGN</h2>
         </div>
         
         <!----------------- about ----------------->
