--- a/tec.html
+++ b/tec.html
@@ -29,8 +29,10 @@
     <div class="nav">
         <div class="nav-container">
             <ul class="logo">
-                <li><a href="index.html">
-                    <img src="img/title.svg"></a>
+                <li>
+                    <a href="index.html">
+                        <div><img src="img/title.svg" width="100px;"></div>
+                    </a>
                 </li>
             </ul>
             <ul class="menu">
