--- a/drawing.html
+++ b/drawing.html
@@ -45,7 +45,7 @@
     <div class="container">
         
         <!----------------- title ----------------->
-        <div class="about-item"> 
+        <div class="title-item"> 
             <h1>Drawing</h1>
             <h2>Collection</h2>
         </div>
