--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <!----------------- tifa ----------------->
         <div class="title-item"> 
-            <p style="text-align: center;"><img src="img/logo.svg" width="200px"></p>
+            <!--<p style="text-align: center;"><img src="img/logo.svg" width="200px"></p>-->
             <h1>HI, I'M TIFA.</h1>
             <h2>A UI Designer & Illustrator based in Taipei, Taiwan.</h2>
         </div>
@@ -124,7 +124,7 @@
                         <img src="img/cover/drawing.png">
                     </a>
                     <h3>Drawing</h3>
-                    <p>Collection</p>
+                    <p>Personal Work Collection</p>
                     
                 </div>
                
